# lang-sma

./: .build-config.yml  .cvsignore  .gitignore  .glottologid.txt  ANALYSE_skolehistorie_sma.txt  CITATION.cff  Gg_SAKER.txt  KompilereFST.jspwiki  Links.md  MAANA_Lemma.lexc  MAANA_lemma.txt  MAJA_VersjonNormering.jspwiki  MAJA_VersjonNormering.txt  Makefile  Makefile.in  NORMATIVITY_ISSUE.txt  README  README.markdown  README.md  _config.yml  abbreviations-affixes-fst-src.md  aclocal.m4  acronyms-affixes.jspwiki  adjectives-affixes-fst-src.md  adjectives-affixes.md  adjectives-stems-fst-src.md  adverbs-stems-fst-src.md  aff-adjectives-oahpa-oahpa-filer-fst-src.md  aff-adjectives-oahpa.md  arbete_normer.jspwiki  arbete_normer.txt  arbete_normer2.jspwiki  arbete_normer2.txt  autogen.sh  config.status  configure  configure.ac  disambiguator-cg3-src.md  docu-sma-adjs.jspwiki  docu-sma-background.xml  (+107 more)
doc/: ConvertingToApertium.jspwiki  KompilereFST.jspwiki  Links.jspwiki  Links.md  MAJA_VersjonNormering.jspwiki  Makefile.am  WhatIsThis.jspwiki  abbreviations-affixes.jspwiki  abbreviations-affixes.md  acronyms-affixes.jspwiki  acronyms-affixes.md  adj-meeting-05-2009.jspwiki  adjectives-affixes.jspwiki  adjectives-affixes.md  adjectives-oahpa-affixes.jspwiki  adjectives-oahpa-stems.jspwiki  adjectives-stems.jspwiki  adjectives-stems.md  arbete_normer2.jspwiki  disambiguation-syntax.jspwiki  disambiguator-syntax.jspwiki  disambiguator-syntax.md  doc-comments.conf  docu-sma-adjs.jspwiki  docu-sma-background.xml  docu-sma-bugs.xml  docu-sma-deptags.xml  docu-sma-grammartags.xml  docu-sma-lex.xml  docu-sma-morphophonology.xml  docu-sma-testplan.xml  docu-sma-twol.xml  docu-sma-verbs.xml  index.xml  j-sma.xml  lemma.jspwiki  missing_list_work.txt  normativity-issues.xml  nouns-affixes.jspwiki  nouns-affixes.md  (+18 more)
docs/: ConvertingToApertium.jspwiki  ConvertingToApertium.md  KompilereFST.jspwiki  Links.jspwiki  Links.md  Makefile  Makefile.am  Makefile.am.rej  Makefile.in  WhatIsThis.jspwiki  _config.yml  abbreviations-affixes.jspwiki  acronyms-affixes.md  adj-meeting-05-2009.md  adjectives-stems.md  disambiguator-syntax.md  docu-sma-adjs.jspwiki  docu-sma-background.md  docu-sma-background.xml  docu-sma-bugs.xml  docu-sma-deptags.xml  docu-sma-grammartags.xml  docu-sma-lex.md  docu-sma-lex.xml  docu-sma-morphophonology.md  docu-sma-morphophonology.xml  docu-sma-testplan.xml  docu-sma-twol.xml  docu-sma-verbs.xml  index-header.md  index.md  j-sma.xml  language-map.md  lemma.jspwiki  lemma.md  link-header.md  missing_list_work.txt  nouns-affixes.jspwiki  nouns-affixes.md  numerals-affixes.jspwiki  (+22 more)
docs/FORESPORSEL/: Foresporsel_Jacobsen.txt  Kontrakt_3_Mijjen gïele_Anna_Jacobsen.no.docx  Kontrakt_Tekstmateriale_Anna_Jacobsen.no.docx  ~$ntrakt_Anna_Jacobsen.no.docx  ~$ntrakt_Marhkosen_Vaentjele_Anna_Jacobsen.no.docx
docs/badgedata/: fst-coverage.json  speller-suggestions.json  speller-version.json
docs/gramcheck/: collecting-developer-texts.md  index.md
docs/testlogs/: nouns-lemmas.md  speller-lemmas.md  verbs-lemmas.md
docs/typosreport/: report.json
src/: Liste_mangel_Trond_27  Makefile  Makefile.am  Makefile.in  Oahpa_fstii.txt  README  abbr-sma-lex.txt  acro-sma-lex.txt  adj-sma-lex.txt  adv-sma-lex.txt  case.regex  clock-sma.lexc  closed-sma-lex.txt  conjunction-sma-lex.txt  date-sma.lexc  derivation-filter.regex  dictadj_missing_fst  dictadj_not_in_fst  dictadv_not_in_fst  dictnouns_missing_fst  dictnouns_not_in_fst  focus-filter.regex  hyph-sma.txt  interjection-sma-lex.txt  list-of-pronoun-forms  missing adjectives.txt  missing_101126.txt  missing_101126d.txt  missing_101127.txt  missing_20110429.txt  missing_bound_20110505.txt  more sma adjectives.txt  noun-sma-lex.txt  numeral-sma-lex.txt  particle-sma-lex.txt  phon-sma.xfst  pp-sma-lex.txt  pronoun-sma-lex.txt  propernoun-sma-lex.txt  propernoun-sma-morph.txt  (+19 more)
src/VERBAVLEDNINGER/: Gåetedh.doc  Hasselbrink.doc  OK_didh.txt  OK_distedh.txt  OK_estedh.txt  OK_gåetedh.txt  OK_sjidh.txt
src/cg3/: Makefile.am  disambiguator.cg3  valency.cg3
src/filters/: Makefile.am  area-tags.txt  block-illegal_compound-strings.regex  change-optionally-word_boundary_to_hyphen.regex  derivation-tags.txt  dialect-tags.txt  error-tags.txt  grammatical-tags.txt  insert-default-compounding-tags.regex  insert-default_left_compounding-tags.regex  lexicon-tags.txt  make-optional-area-tags.regex  make-optional-derivation-tags.regex  make-optional-dialect-tags.regex  make-optional-error-tags.regex  make-optional-grammatical-tags.regex  make-optional-orig_lang-tags.regex  make-optional-semantic-tags.regex  orig_lang-tags.txt  remove-DNorm-tags.regex  remove-all_dialects_but_L-strings.regex  remove-all_dialects_but_NOR-strings.regex  remove-all_dialects_but_SH-strings.regex  remove-all_dialects_but_SW-strings.regex  remove-area-tags.regex  remove-derivation-strings.regex  remove-derivation-tags.regex  remove-dialect-tags.regex  remove-error-strings.regex  remove-error-tags.regex  remove-grammatical-tags.regex  remove-orig_lang-tags.regex  remove-rel_focus-strings.regex  remove-semantic-tags-before-derivations.regex  remove-semantic-tags.regex  remove-usage-tags.regex  reorder-semantic-tags.regex  semantic-tags.txt  split-CmpN-tags.regex  usage-tags.txt
src/fst/: Makefile  Makefile.am  Makefile.in  compounding.lexc  phonology.twolc  root.lexc  tags.yaml
src/fst/affixes/: nouns.lexc  (+7 more)
src/hyphenation/: hyphenation.xfscript
src/morphology/: Makefile.am  clitics.lexc  compounding.lexc  root.lexc  tags.yaml
src/orthography/: inituppercase.regex  spellrelax-mobile-keyboard.regex  spellrelax-with-flagtags.regex  spellrelax.regex
src/phonetics/: convert2ipa.xfscript  text2ipa-sma.xfscript  text2ipa.xfscript  txt2ipa.xfscript
src/phonology/: sma-phon.twolc  und-phon.twolc
src/scripts/: doccomments2jspwiki.awk  smi-sma-conversion.pl
src/syntax/: abbr.txt  disambiguation.cg3  disambiguator.cg3
src/tagsets/: Makefile.am
src/transcriptions/: clock.lexc  date.lexc  numbers.lexc  transcriptor-clock-digit2text.lexc  transcriptor-date-digit2text.lexc  (+1 more)
(+1528 files in other folders)
