## Process this file with automake to produce Makefile.in
## Copyright: Sámediggi/Divvun/UiT
## Licence: GPL v3+

if CAN_DOCC

# INSTALL these files:
JSP_PAGES=root-all.jspwiki

# clitics-all.jspwiki
# compounding-all.jspwiki
# 
# abbreviations-stems.jspwiki
# acronyms-stems.jspwiki
# adjectives-oahpa-stems.jspwiki
# adjectives-stems.jspwiki
# adpositions-stems.jspwiki
# adverbs-stems.jspwiki
# conjunctions-stems.jspwiki
# interjections-stems.jspwiki
# nouns-oahpa-stems.jspwiki
# nouns-stems.jspwiki
# numerals-stems.jspwiki
# particles-stems.jspwiki
# pronouns-stems.jspwiki
# propernouns-stems.jspwiki
# punctuation-stems.jspwiki
# smi-propernouns-stems.jspwiki
# subjunctions-stems.jspwiki
# verbs-stems.jspwiki
# 
# adjectives-oahpa-affixes.jspwiki
# adjectives-affixes.jspwiki
# nouns-affixes.jspwiki
# propernouns-affixes.jspwiki
# verbs-affixes.jspwiki

ALLINONE_JSP_PAGE=$(GTLANG).jspwiki

endif # CAN_DOCC

include $(top_srcdir)/am-shared/doc-include.am
