## Process this file with automake to produce Makefile.in
## Copyright: Sámediggi/Divvun/UiT
## Licence: GPL v3+

# List all jspwiki files that should be created from source files in the
# JSP_PAGES variable. The filename pattern is as follows:
#
# dir/filename.lexc => filename-dir.jspwiki

MD_PAGES=root-morphology.md       \
		  phonology-morphology.md  \
		  nouns-affixes.md         \
		  propernouns-affixes.md   \
		  adjectives-affixes.md    \
		  verbs-affixes.md         \
		  verbs-stems.md         \
		  numerals-affixes.md      \
		  abbreviations-affixes.md \
		  acronyms-affixes.md      \
		  adjectives-stems.md      \
		  disambiguator-syntax.md

#         sma-acronyms-stems.jspwiki    \
#		  smi-propernouns-stems.jspwiki \
# clitics-morphology.jspwiki       \
# compounding-morphology.jspwiki   \
# adpositions-stems.jspwiki        \
# adverbs-stems.jspwiki            \
# conjunctions-stems.jspwiki       \
# interjections-stems.jspwiki      \
# nouns-stems.jspwiki              \
# numerals-stems.jspwiki           \
# particles-stems.jspwiki          \
# pronouns-stems.jspwiki           \
# propernouns-stems.jspwiki        \
# punctuation-stems.jspwiki        \
# subjunctions-stems.jspwiki

include $(top_srcdir)/../giella-core/am-shared/docs-dir-include.am
